Closed Bug 574287 Opened 14 years ago Closed 14 years ago

[DW] Underline is drawn over the CJK character's glyphs of "bad" fonts

Categories

(Core :: Graphics, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
Tracking Status
blocking2.0 --- final+

People

(Reporter: masayuki, Assigned: jfkthame)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(1 file)

Similar to bug 541924.

DirectWrite font handlers don't honor "font.blacklist.underline_offset". Therefore, with the bad fonts in some font-size, the underline is drawn at too close.

See bug 417014 for the detail of the pref. The bug also has the testcase. You can see this bug on the testcase. Input "MS PGothic" (this font is Japanese default font) to the input field and push the button, then, the underlines are drawn over the CJK character glyphs on 9th and 10th lines.
Assignee: nobody → jfkthame
Attachment #453740 - Flags: review?(bas.schouten)
Attachment #453740 - Flags: review?(bas.schouten) → review+
Pushed to trunk: http://hg.mozilla.org/mozilla-central/rev/17ee850db746
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Great! Thank you!
Status: RESOLVED → VERIFIED
Blocks: dwrite
No longer depends on: dwrite
blocking2.0: ? → final+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: