bug 574287 - honor the bad-underline blacklist in dwrite font backend. r=bas